# OBF_Demo

./: .gitignore  Event.py  Game.py  MatchSet.py  OBFSQL.py  PersonalInformation.py  Phase.py  PlayerInfo.py  README.md  Retrieval_example.py  Tournament.py  config.py  demo_obs.py  entrant.py  example.json  example.py  example_new.json  obfmodels.py  obfsql.db  obfsql.db-shm  obfsqlmodel.py  obs_db.sql  obsmodels.py  pyproject.toml  requirements.txt  storage_example.py  todo.md
.github/workflows/: python-package.yml
docs/: conf.py  obfsql.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  obfsql.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  obfsql.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  peewee.html
docs/_build/html/_modules/obfsql/: Bracket.html  Characters.html  Entrant.html  Event.html  Game.html  MatchSet.html  OBFData.html  PersonalInformation.html  Phase.html  Tournament.html  obfmodels.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
example/: example.json  example.py
src/obfsql/: Bracket.py  Characters.py  Entrant.py  Event.py  Game.py  MatchSet.py  OBFData.py  PersonalInformation.py  Phase.py  Tournament.py  __init__.py  config.py  example_new3.json  obfmodels.py  obfsql2.db
src/utils/: obs_db.sql
tests/: Retrieval_example.py  example_new_2.txt  example_new_v1.0.json  obfsql.db  obfsql2.db
