[project]
name = "obfsql"
version = "0.1.0"
description = "An Open Bracket Formet to SQL and vise versa package"
authors = [
    {name = "AJ Adejare"}
]
license = {text = "AGPL"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "peewee >= 3.15.3",
    "pymysql >= 1.1.1",
    "psycopg>=3.2",
    "psycopg[pool]>=3.2"
]

[tool.setuptools.packages.find]
where =["srcl"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
